// See README.md for information and build instructions.
//
// Note: START and END tags are used in comments to define sections used in
// tutorials.  They are not part of the syntax for Protocol Buffers.
//
// To get an in-depth walkthrough of this file and the related examples, see:
// https://developers.google.com/protocol-buffers/docs/tutorials

// [START declaration]
syntax = "proto3";
package capstone_protobuf;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
// [END declaration]

// [START messages]
message Packet {
  int32 board_id_msg_origin = 1;
  int32 nonce = 2;
  int32 time_received = 3;
  int32 time_sent = 4;

  Payload payload = 5;

  message Payload{
    google.protobuf.Timestamp time_data_captured = 1;
    Data data = 2;
    OriginalProtocol protocol = 3;
    bytes original_message = 4;
    bytes digital_signature = 5;

    message Data {
      string label = 1;
      repeated google.protobuf.Any data = 2;
    }

    enum OriginalProtocol {
      CAN = 0;
      Modbus = 1;
    }
  }

}

message Temperature
{
  int32 temperature = 1;
}

message Humidity
{
  int32 humidity = 1;
}

message Pressure
{
  int32 pressure = 1;
}

message GPS
{
  int64 latitude = 1;
  int64 longitude = 2;
  int64 altitude = 3;
}

message Heading
{
  double heading = 1;
  double deviation = 2;
  double variation = 3;
}
// [END messages]
